done some changes in html file and pushed via terminal

--- a/index.html
+++ b/index.html
@@ -20,109 +20,109 @@
         </nav>
  <div class="container-area">
     <div class="gallery">
-        <img src="man-2.png" >
+        <img src="images/man-2.png" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="ph-1.png" >
+        <img src="images/ph-1.png" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="ph-2.png" >
+        <img src="images/ph-2.png" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="ph-3.png" >
+        <img src="images/ph-3.png" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="phone.png" >
+        <img src="images/phone.png" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="lady.png" >
+        <img src="images/lady.png" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="article-ph-1.png" >
+        <img src="images/article-ph-1.png" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="article-ph-2.png" >
+        <img src="images/article-ph-2.png" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="article-ph-3.png" >
+        <img src="images/article-ph-3.png" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="camera.png" >
-        <h1>Image Name</h1>
-    </div>
-    <!-- <div class="gallery">
-        <img src="man.png" >
-        <h1>Image Name</h1>
-    </div> -->
-    <div class="gallery">
-        <img src="8.jpg" >
+        <img src="images/camera.png" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="4.jpg" >
+        <img src="images/man.png" >
+        <h1>Image Name</h1>
+    </div> -
+    <div class="gallery">
+        <img src="images/8.jpg" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="5.jpg" >
+        <img src="images/4.jpg" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="6.jpg" >
+        <img src="images/5.jpg" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="7.jpg" >
+        <img src="images/6.jpg" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="1.jpg" >
+        <img src="images/7.jpg" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="2.jpg" >
+        <img src="images/1.jpg" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="3.jpg" >
+        <img src="images/2.jpg" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="4.jpg" >
+        <img src="images/3.jpg" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="categories1.jpg" >
+        <img src="images/4.jpg" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="categories2.jpeg" >
+        <img src="images/categories1.jpg" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="categories3.jpeg" >
+        <img src="images/categories2.jpeg" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="product1.jpg" >
+        <img src="images/categories3.jpeg" >
         <h1>Image Name</h1>
     </div>
     <div class="gallery">
-        <img src="product2.jpg" >
+        <img src="images/product1.jpg" >
+        <h1>Image Name</h1>
+    </div>
+    <div class="gallery">
+        <img src="images/product2.jpg" >
         <h1>Image Name</h1>
     </div>    <div class="gallery">
-        <img src="product3.jpg" >
+        <img src="images/product3.jpg" >
         <h1>Image Name</h1>
     </div>    <div class="gallery">
-        <img src="product4.jpg" >
+        <img src="images/product4.jpg" >
         <h1>Image Name</h1>
     </div>
  </div>
